Move basic tests into subdirectory

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,14 +1,1 @@
-enable_language(CXX)
-
-add_executable(Test_Basic
-    RunAllTests.cpp
-    Test_Basic.cpp
-)
-target_link_libraries(Test_Basic
-    PRIVATE
-        CppUTest
-)
-add_test(
-    NAME CTest_Basic
-    COMMAND Test_Basic
-)
+add_subdirectory(Basic)
