Add basic mock of function in production code library

--- a/tests/Mock/CMakeLists.txt
+++ b/tests/Mock/CMakeLists.txt
@@ -3,10 +3,13 @@ enable_language(CXX)
 add_executable(Test_Mock
     RunAllTests.cpp
     Test_Mock.cpp
+    "${CMAKE_HOME_DIRECTORY}/mocks/MockSomeLibrary.cpp"
 )
 target_link_libraries(Test_Mock
     PRIVATE
         CppUTest
+        CppUTestExt
+        SomeLibrary::SomeLibrary
 )
 add_test(
     NAME CTest_Mock
