Extract comparator into C++ file

--- a/tests/MockComparator/CMakeLists.txt
+++ b/tests/MockComparator/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(Test_MockComparator
     RunAllTests.cpp
     Test_MockComparator.cpp
     SomeStructComparator.h
+    SomeStructComparator.cpp
     "${CMAKE_HOME_DIRECTORY}/mocks/MockSomeLibrary.cpp"
 )
 target_link_libraries(Test_MockComparator
