Expand and test SomeStructComparator
Add null checks.
Test element comparison.

--- a/tests/MockComparator/CMakeLists.txt
+++ b/tests/MockComparator/CMakeLists.txt
@@ -2,6 +2,7 @@ enable_language(CXX)
 
 add_executable(Test_MockComparator
     RunAllTests.cpp
+    Test_SomeStructComparator.cpp
     Test_MockComparator.cpp
     SomeStructComparator.h
     SomeStructComparator.cpp
