Split up SomeStruct comparator tests and mock using SomeStruct comparator

--- a/tests/MockComparator/CMakeLists.txt
+++ b/tests/MockComparator/CMakeLists.txt
@@ -2,16 +2,13 @@ enable_language(CXX)
 
 add_executable(Test_MockComparator
     RunAllTests.cpp
-    Test_SomeStructComparator.cpp
     Test_MockComparator.cpp
-    SomeStructComparator.h
-    SomeStructComparator.cpp
-    "${CMAKE_HOME_DIRECTORY}/mocks/MockSomeLibrary.cpp"
 )
 target_link_libraries(Test_MockComparator
     PRIVATE
         CppUTest
         CppUTestExt
+        MockSomeLibrary::MockSomeLibrary
         SomeLibrary::SomeLibrary
 )
 add_test(
