Add skeleton of HiddenStructComparator tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(Basic)
 add_subdirectory(Mock)
 add_subdirectory(SomeStructComparator)
+add_subdirectory(HiddenStructComparator)
 add_subdirectory(MockComparator)
