Extract SomeStructCopier into its own file

--- a/mocks/CMakeLists.txt
+++ b/mocks/CMakeLists.txt
@@ -3,6 +3,8 @@ enable_language(CXX)
 add_library(MockSomeLibrary
     SomeStructComparator.h
     SomeStructComparator.cpp
+    SomeStructCopier.h
+    SomeStructCopier.cpp
     HiddenStructComparator.h
     HiddenStructComparator.cpp
     MockSomeLibrary.cpp
