Outline of Copier in Mock

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(SomeStructComparator)
 add_subdirectory(MockComparator)
 add_subdirectory(HiddenStructComparator)
 add_subdirectory(SomeStructCopier)
+add_subdirectory(MockCopier)
