Add test framework for HiddenStruct copier

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(Mock)
 add_subdirectory(SomeStructComparator)
 add_subdirectory(MockComparator)
 add_subdirectory(HiddenStructComparator)
+add_subdirectory(HiddenStructCopier)
 add_subdirectory(SomeStructCopier)
 add_subdirectory(MockCopier)
