--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(HiddenStructComparator)
 add_subdirectory(HiddenStructCopier)
 add_subdirectory(SomeStructCopier)
 add_subdirectory(MockCopier)
+add_subdirectory(SomeStructInitParamsComparator)
